k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lamaran-web
  namespace: lamaran
spec:
  selector:
    app: lamaran-web
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
